Fix center content on mobile

--- a/sass/secondthought-addons-styles.scss
+++ b/sass/secondthought-addons-styles.scss
@@ -27,6 +27,7 @@
   }
   @include media($xs) {
     flex-direction: column;
+    justify-content: center;
   }
   > div {
   }
